<resources>
    <string name="app_name">Higher Lower Kotlin</string>

    <string name="title">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="diceDescription">Dice number: %d</string>

    <string name="last_throw">Last Throw: %d</string>
    <string name="higher">Higher</string>
    <string name="equals">Equals</string>
    <string name="lower">Lower</string>
    <string name="dice">Dice</string>
</resources>
